cmake_minimum_required(VERSION 3.23)
project(DataStructures_CPP)

set(CMAKE_CXX_STANDARD 17)

add_library(GRAPH_PUZZLE_GAME_ECEMOZBIYIK Node.cpp Node.h LinkedList.cpp LinkedList.h DoublyNode.cpp DoublyNode.h DoublyLinkedList.cpp DoublyLinkedList.h Heap.cpp Heap.h Set.h DisjointSet.h Graph.cpp Graph.h Edge.cpp Edge.h EdgeList.cpp EdgeList.h Graph.cpp Graph.h Path.cpp Path.h AbstractGraph.cpp AbstractGraph.h MinHeap.h Node.cpp main.cpp)
